<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_background"
    android:orientation="vertical"
    tools:context=".ui.activities.GameActivity">

    <include layout="@layout/tool_bar" android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:columnCount="5"
            android:paddingHorizontal="40dp"
            android:paddingVertical="40dp"
            android:rowCount="5"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/LetterA"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterA"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterB"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterB"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterC"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterC"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterD"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterD"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterE"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterE"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterF"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterF"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterG"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterG"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterH"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterH"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterI"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterI"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterJ"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterJ"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterK"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterK"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterL"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterL"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterM"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterM"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterN"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterN"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterO"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterO"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterP"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterP"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterQ"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterQ"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterR"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterR"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterS"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterS"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterT"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterT"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterU"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterU"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterV"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterV"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterX"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterX"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterY"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterY"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LetterZ"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@drawable/letters_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/letterZ"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </RelativeLayout>
        </GridLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-black"
            android:text="@string/Default_text"
            android:textAlignment="center"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"
            android:autofillHints="username"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hint_game"
            android:inputType="textShortMessage"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            android:textSize="30sp"
            android:textStyle="italic|bold" />

    </RelativeLayout>

    <include layout="@layout/game_bottom_bar" android:id="@+id/gamebar"/>

</androidx.appcompat.widget.LinearLayoutCompat>