<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/primary_grad"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        style="@style/secondary_grad"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:text="@string/textGameModeMainMenu"
            android:textAlignment="center"
            android:layout_gravity="center"
            style="@style/text_view_popup_title"/>
        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_height="55dp"
            android:src="@drawable/quit"
            android:scaleType="fitCenter"
            android:background="@drawable/back_secondary"
            android:contentDescription="@string/contentDescriptionCancelPopup" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/modeRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:maxWidth="320dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/start_option"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginVertical="10dp"
            style="@style/radio_form"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:text="@string/mode_start" />

        <RadioButton
            android:id="@+id/all_option"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginVertical="10dp"
            style="@style/radio_form"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:text="@string/mode_all" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmTextMainMenu"
        android:textSize="30sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        style="@style/button"/>
    <include layout="@layout/default_bottom_bar"/>


</androidx.appcompat.widget.LinearLayoutCompat>