<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_grad"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jetbrains_mono_thin"
            android:text="@string/textSignInMainMenu"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:paddingVertical="20dp"/>
        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/quit"
            android:scaleType="fitCenter"
            android:background="@drawable/transparent"
            android:contentDescription="@string/contentDescriptionCancelPopup" />
    </LinearLayout>


    <TextView
        android:id="@+id/textMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/namePopup"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="50sp"
        android:textStyle="italic"
        android:paddingHorizontal="20dp"
        android:paddingTop="80dp"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:fontFamily="sans-serif-black"
        android:hint="@string/hint_game"
        android:textColorHint="@color/textPrimary"
        android:inputType="textShortMessage"
        android:textColor="@color/textPrimary"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        android:layout_marginHorizontal="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/agregar"
            android:scaleType="fitCenter"
            android:background="@drawable/transparent"
            android:contentDescription="@string/contentDescriptionCreatePopup" />
        <ImageButton
            android:id="@+id/logButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/login2"
            android:scaleType="fitCenter"
            android:background="@drawable/transparent"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/contentDescriptionLoginPopup" />

    </LinearLayout>

    <include layout="@layout/default_bottom_bar"/>


</androidx.appcompat.widget.LinearLayoutCompat>