<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/back_secondary"
    android:padding="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/primary_grad"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="20dp"
            android:text="@string/Default_text"
            style="@style/text_view_mainTitle"/>

        <TextView
            android:id="@+id/def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="fill_horizontal"
            android:paddingHorizontal="40dp"
            style="@style/text_view_secondTitle"
            android:padding="20dp"
            android:text="@string/Default_text"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <ImageButton
                android:id="@+id/left"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/left_arrow"
                android:scaleType="fitCenter"
                android:background="@drawable/transparent"
                android:contentDescription="@string/left_arrow" />

            <ImageButton
                android:id="@+id/right"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/right_arrow"
                android:scaleType="fitCenter"
                android:background="@drawable/transparent"
                android:contentDescription="@string/right_arrow" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>